fix: add no-scrollbar utility to improve layout in comparison section

--- a/nextjs-client/app/globals.css
+++ b/nextjs-client/app/globals.css
@@ -30,3 +30,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@utility no-scrollbar {
+  @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
+}
